--- a/index.html 教材.html
+++ b/index.html 教材.html
@@ -11,38 +11,6 @@
     </style>
   </head>
   <body>
-    <div style="
-     backgroutnd-color:#f1f1f1;
-     text-ailgn:center;
-     padding: 40px; 
-    ">
-     <img src="https://zhangshengfeng.com/logo.png" alt="张圣峰" width="80xp" height="80xp">
-    </div>
-    <div style="
-     max-width: 700px;
-     margin: 30px auto;
-     padding: 15px;
-     line-height:1.7;
-     color: red;
-    ">
-    <p>我是你爹</p>  
-    <p>我是吴一杭的爹</p>  
-    <p>吴一杭是我儿子</p>  
-    <p>吴一杭是我儿子</p>  
-    <p>吴一杭是我儿子</p>  
-    <p>吴一杭是我儿子</p>  
-    <p>吴一杭是我儿子</p>  
-    <p>吴一杭是我儿子</p>  
-    <p>吴一杭是我儿子</p>    
-    </div>
-    <div style="
-     backgroutnd-color:#f1f1f1;
-     text-ailgn:center;
-     padding: 40px;
-     font-size: 12px 
-    ">
-     <p>欢迎来到吴一杭他爹的网站</p>
-     <a href="http://zhangshengfeng.com/">友情链接 </a>
-    </div>
+    <h1>哈哈 这是新的html</h1>
   </body>
 </html>
